--- a/Code_ModelTask2_TabularBasedDetection_LG01.ipynb
+++ b/Code_ModelTask2_TabularBasedDetection_LG01.ipynb
@@ -62,7 +62,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x8HECWfPk4vq",
-        "outputId": "4db8e83c-ee71-4cd5-f154-48d32dc13bdf"
+        "outputId": "0e5490ef-8303-416e-e028-ac2da1137a0b"
       },
       "execution_count": null,
       "outputs": [
@@ -91,7 +91,7 @@
             "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->catboost) (3.2.3)\n",
             "Requirement already satisfied: tenacity>=6.2.0 in /usr/local/lib/python3.11/dist-packages (from plotly->catboost) (8.5.0)\n",
             "Downloading catboost-1.2.8-cp311-cp311-manylinux2014_x86_64.whl (99.2 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m99.2/99.2 MB\u001b[0m \u001b[31m10.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m99.2/99.2 MB\u001b[0m \u001b[31m7.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: catboost\n",
             "Successfully installed catboost-1.2.8\n",
             "Collecting optuna\n",
@@ -109,9 +109,9 @@
             "Requirement already satisfied: typing-extensions>=4.12 in /usr/local/lib/python3.11/dist-packages (from alembic>=1.5.0->optuna) (4.14.0)\n",
             "Requirement already satisfied: greenlet>=1 in /usr/local/lib/python3.11/dist-packages (from sqlalchemy>=1.4.2->optuna) (3.2.3)\n",
             "Downloading optuna-4.4.0-py3-none-any.whl (395 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m395.9/395.9 kB\u001b[0m \u001b[31m23.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m395.9/395.9 kB\u001b[0m \u001b[31m12.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading alembic-1.16.3-py3-none-any.whl (246 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m246.9/246.9 kB\u001b[0m \u001b[31m20.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m246.9/246.9 kB\u001b[0m \u001b[31m23.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading colorlog-6.9.0-py3-none-any.whl (11 kB)\n",
             "Installing collected packages: colorlog, alembic, optuna\n",
             "Successfully installed alembic-1.16.3 colorlog-6.9.0 optuna-4.4.0\n"
@@ -5183,7 +5183,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Alasan memilih LightGBM karena untuk masalah ini, metrik terpenting adalah F1-Score pada kelas 'Bad', karena ini mengukur keseimbangan antara precision (seberapa akurat prediksi 'Bad' Anda) dan recall (seberapa banyak kasus 'Bad' yang berhasil Anda temukan) pada kelas minoritas yang paling krusial."
+        "Alasan memilih LightGBM karena untuk masalah ini, metrik terpenting adalah F1-Score pada kelas 'Bad', karena ini mengukur keseimbangan antara precision (seberapa akurat prediksi 'Bad' Anda) dan recall (seberapa banyak kasus 'Bad' yang berhasil Anda temukan) pada kelas minoritas yang paling krusial. Meskipun performa LightGBM \"mirip\" dengan XGBoost, kami tetap memilih LightGBM sebagai model terbaik karena LightGBM lebih optimal dari segi kecepatan pada waktu training."
       ],
       "metadata": {
         "id": "e3uzfea5IN1x"
